exports[`test Should be aligned horizontally 1`] = `
"<div class=\"layout\">
  <div class=\"block\">
    1
  </div>
  <div class=\"block\">
    2
  </div>
  <div class=\"block\">
    3
  </div>
  <div class=\"block\">
    4
  </div>
</div>
"
`;

exports[`test Should be aligned vertically 1`] = `
"<div class=\"vertical-blocks\">
  <div class=\"block\">
    1
  </div>
  <div class=\"block\">
    2
  </div>
  <div class=\"block\">
    3
  </div>
  <div class=\"block\">
    4
  </div>
</div>
"
`;

exports[`test Should be justified horizontally 1`] = `
"<div class=\"layout justified\">
  <div class=\"block\">
    1
  </div>
  <div class=\"block\">
    2
  </div>
  <div class=\"block\">
    3
  </div>
  <div class=\"block\">
    4
  </div>
</div>
"
`;

exports[`test Should be reversed 1`] = `
"<div class=\"layout horizontal reverse\">
  <div class=\"block\">
    1
  </div>
  <div class=\"block\">
    2
  </div>
  <div class=\"block\">
    3
  </div>
  <div class=\"block\">
    4
  </div>
</div>
"
`;

exports[`test Should be stacked vertically and inline 1`] = `
"<div class=\"layout vertical inline\">
  <div class=\"block\">
    1
  </div>
  <div class=\"block\">
    2
  </div>
  <div class=\"block\">
    3
  </div>
  <div class=\"block\">
    4
  </div>
</div>
"
`;

exports[`test Should fill the space 1`] = `
"<div class=\"fixed-height\">
  <div class=\"block pe-fit\"></div>
</div>
"
`;
